# krunner-whatbyte

./: .gitignore  CMakeLists.txt  build.sh  install.sh  readme.md  uninstall.sh
srcs/: helper.cpp  helper.h  krunnerwhatbyte.cpp  krunnerwhatbyte.h  krunnerwhatbyte.json  sm.cpp  sm.h
